@@ -1,4 +1,4 @@
-/*	$NetBSD: eaytest.c,v 1.6 2006/09/09 16:22:09 manu Exp $	*/
+/*	$NetBSD: eaytest.c,v 1.7 2006/10/06 12:02:27 manu Exp $	*/
 
 /* Id: eaytest.c,v 1.22 2005/06/19 18:02:54 manubsd Exp */
 
@@ -712,6 +712,14 @@ ciphertest(ac, av)
 			  &key, key.l,
 			  &iv0, 8,
 			  eay_rc5_encrypt, eay_rc5_decrypt) < 0)
+	  return -1;
+#endif
+#if defined(HAVE_OPENSSL_CAMELLIA_H)
+	if (ciphertest_1 ("CAMELLIA",
+			  &data, 16,
+			  &key, key.l,
+			  &iv0, 16,
+			  eay_camellia_encrypt, eay_camellia_decrypt) < 0)
 	  return -1;
 #endif
 	return 0;
